[package]
name = "srs2dge"
version = "0.4.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"
repository = "https://github.com/Overpeek/srs2dge"
documentation = "https://docs.rs/srs2dge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "asteroids"
path = "examples/asteroids/main.rs"

[[example]]
name = "flexbox"
path = "examples/flexbox/main.rs"

[[example]]
name = "gui"
path = "examples/gui/main.rs"

# profiles

[profile.release-wasm]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 'z'

[profile.release]
debug = true

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

# features

[features]
default = ["parallel-ecs", "gizmos", "gui", "gui-derive", "presets", "res", "text"]

dynamic = ["srs2dge-link-dynamic"]

parallel-ecs = ["srs2dge-link-static/parallel-ecs"]
ecs = ["srs2dge-link-static/ecs"]
gizmos = ["srs2dge-link-static/gizmos"]
gui = ["srs2dge-link-static/gui"]
gui-derive = ["srs2dge-link-static/gui-derive"]
presets = ["srs2dge-link-static/presets"]
res = ["srs2dge-link-static/res"]
text = ["srs2dge-link-static/text"]

# deps

[dependencies]
srs2dge-link-static = { path = "crates/srs2dge-link-static", version = "0.4" }
srs2dge-link-dynamic = { path = "crates/srs2dge-link-dynamic", version = "0.4", optional = true }

[dev-dependencies]
instant = "0.1"
rand = "0.8"
rand_chacha = "0.3"
legion = { version = "0.4", default-features = false, features = [
	"codegen",
	"wasm-bindgen",
	"serialize",
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
fastrand = "1.7"
# rapier2d = "0.11"


[workspace]
members = ["crates/*"]
resolver = "2"
