[package]
name = "srs2dge"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# features

[features]
default = ["dynamic", "all"]

dynamic = ["srs2dge-link-dynamic"]
all = ["parallel-ecs", "gizmos", "gui", "gui-derive", "gui-gizmos", "presets", "res", "text"]

parallel-ecs = ["srs2dge-link-static/parallel-ecs"]
ecs = ["srs2dge-link-static/ecs"]
gizmos = ["srs2dge-link-static/gizmos"]
gui = ["srs2dge-link-static/gui"]
gui-derive = ["srs2dge-link-static/gui-derive"]
gui-gizmos = ["srs2dge-link-static/gui-gizmos"]
presets = ["srs2dge-link-static/presets"]
res = ["srs2dge-link-static/res"]
text = ["srs2dge-link-static/text"]

# deps

[dependencies]
srs2dge-link-static = { path = "crates/srs2dge-link-static" }
srs2dge-link-dynamic = { path = "crates/srs2dge-link-dynamic", optional = true }

[dev-dependencies]
instant = "0.1"
rand = "0.8"
rand_chacha = "0.3"
legion = { version = "0.4", default-features = false, features = [
	"codegen",
	"wasm-bindgen",
	"serialize",
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
fastrand = "1.7"
# rapier2d = "0.11"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.60", default-features = false, features = ["Window", "Storage"] }

# workspace

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.0"
description = "Simple Rust 2D Game Engine"
license = "MIT"
repository = "https://github.com/Overpeek/srs2dge"
documentation = "https://docs.rs/srs2dge"
keywords = ["game", "engine"]
categories = ["game-engines", "graphics"]

# examples

[[example]]
name = "asteroids"
path = "examples/asteroids/main.rs"

[[example]]
name = "gui"
path = "examples/gui/main/main.rs"

[[example]]
name = "loading_screen"
path = "examples/gui/loading_screen/main.rs"

[profile.release-wasm]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 'z'
debug = false

[profile.release]
debug = true
rpath = true

[profile.dev]
rpath = true

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
debug = false
