[package]
name = "srs2dge-core"
version = "0.2.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
glsl = ["wgpu/glsl", "naga/glsl-in"]
spirv = ["wgpu/spirv", "naga/spv-in"]

[dependencies]
# logging
colorful = "0.2"
log = "0.4"
# graphics
glam = { version = "0.20", features = ["serde", "bytemuck"] }
main_game_loop = { git = "https://github.com/Overpeek/main_game_loop" }
naga = { version = "0.8", features = ["wgsl-in", "validate"] }
wgpu = { version = "0.12", features = ["webgl"] }
# naga = { git = "https://github.com/gfx-rs/naga", rev = "1aa91549", features = [
# 	"wgsl-in",
# 	"validate",
# ] }
# wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "af259aa1", features = [
# 	"webgl",
# ] }
winit = "0.26"
# resources
image = "0.24"
rapid-qoi = "0.6"
# data
bytemuck = { version = "1.9", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
# opt
integer-sqrt = "0.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"

[dev-dependencies]
rand = "0.8"
