[package]
name = "srs2dge-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
glsl = ["wgpu/glsl", "naga/glsl-in"]
spirv = ["wgpu/spirv", "naga/spv-in"]

[dependencies]
# logging
colorful = "0.2"
tracing.workspace = true
# graphics
glam = { version = "0.22", features = ["serde", "bytemuck"] }
# main_game_loop = { git = "https://github.com/Overpeek/main_game_loop", rev = "941aa1faa79914bcdd2bd30cf2e8b219378edf0c" }
main_game_loop = "0.6.0"
naga = { version = "0.10", features = ["wgsl-in", "validate"] }
wgpu = { version = "0.14", features = ["webgl"] }
# naga = { git = "https://github.com/gfx-rs/naga", rev = "1aa91549", features = [
#   "wgsl-in",
#   "validate",
# ] }
# wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "af259aa1", features = [
#   "webgl",
# ] }
winit = "0.27"
# resources
image = "0.24"
rapid-qoi = "0.6"
# data
bytemuck = { version = "1.12", features = ["derive"] }
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
# opt
integer-sqrt = "0.1"

cfg-if = "1.0"

# init logging
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# fut
tokio = { version = "1.24", features = ["rt-multi-thread", "sync"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
# init logging
console_log = { version = "0.2", features = ["color"] }
# wasm panic hook
console_error_panic_hook = "0.1"
# canvas
web-sys = "0.3"
# fut
tokio = { version = "1.21", features = ["rt", "sync"] }
