[package]
name = "srs2dge-ecs"
version = "0.2.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.2" }
specs = { version = "0.17", features = ["derive"] }
