[package]
name = "srs2dge-ecs"
version = "0.2.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.2" }
# legion = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = { version = "0.4", default-features = false, features = [
	"codegen",
	"wasm-bindgen",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = "0.4"
