[package]
name = "srs2dge-ecs"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = []

[dependencies]
srs2dge-core = { path = "../srs2dge-core" }
serde = { version = "1.0", features = ["derive"] }
atomic_refcell = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = { version = "0.4", default-features = false, features = [
	"codegen",
	"wasm-bindgen",
	"serialize",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = "0.4"
