[package]
name = "srs2dge-gui-derive"
version = "0.4.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = "1.0.98"
