[package]
name = "srs2dge-gui-derive"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = "1.0.98"
