[package]
name = "srs2dge-gui"
version = "0.3.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.2" }
srs2dge-presets = { path = "../srs2dge-presets", version = "0.2" }
srs2dge-res = { path = "../srs2dge-res", version = "0.2" }
srs2dge-text = { path = "../srs2dge-text", version = "0.2" }
log = "0.4"
rand = "0.8.5"
