[package]
name = "srs2dge-gui"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gizmos = ["srs2dge-gizmos"]

[dependencies]
srs2dge-core = { path = "../srs2dge-core" }
srs2dge-presets = { path = "../srs2dge-presets" }
srs2dge-res = { path = "../srs2dge-res" }
srs2dge-text = { path = "../srs2dge-text" }
srs2dge-gizmos = { path = "../srs2dge-gizmos", optional = true }
tracing.workspace = true
rand.workspace = true
