[package]
name = "srs2dge-link-dynamic"
version = "0.2.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
srs2dge-link-static = { path = "../srs2dge-link-static", version = "0.2" }
