[package]
name = "srs2dge-link-dynamic"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
srs2dge-link-static = { path = "../srs2dge-link-static" }
