[package]
name = "srs2dge-link-static"
version = "0.4.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

parallel-ecs = ["ecs", "srs2dge-ecs/parallel"]
ecs = ["srs2dge-ecs"]
gizmos = ["srs2dge-gizmos"]
gui = ["srs2dge-gui"]
gui-derive = ["srs2dge-gui-derive"]
presets = ["srs2dge-presets"]
res = ["srs2dge-res"]
text = ["srs2dge-text"]

glsl = ["srs2dge-core/glsl"]
spirv = ["srs2dge-core/spirv"]


[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.4" }
srs2dge-ecs = { path = "../srs2dge-ecs", version = "0.4", optional = true }
srs2dge-gizmos = { path = "../srs2dge-gizmos", version = "0.4", optional = true }
srs2dge-gui = { path = "../srs2dge-gui", version = "0.4", optional = true }
srs2dge-gui-derive = { path = "../srs2dge-gui-derive", version = "0.4", optional = true }
srs2dge-presets = { path = "../srs2dge-presets", version = "0.4", optional = true }
srs2dge-res = { path = "../srs2dge-res", version = "0.4", optional = true }
srs2dge-text = { path = "../srs2dge-text", version = "0.4", optional = true }
