[package]
name = "srs2dge-link-static"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

parallel-ecs = ["ecs", "srs2dge-ecs/parallel"]
ecs = ["srs2dge-ecs"]
gizmos = ["srs2dge-gizmos"]
gui = ["srs2dge-gui"]
gui-derive = ["srs2dge-gui-derive"]
gui-gizmos = ["srs2dge-gui/gizmos"]
presets = ["srs2dge-presets"]
res = ["srs2dge-res"]
text = ["srs2dge-text"]

glsl = ["srs2dge-core/glsl"]
spirv = ["srs2dge-core/spirv"]


[dependencies]
srs2dge-core = { path = "../srs2dge-core" }
srs2dge-ecs = { path = "../srs2dge-ecs", optional = true }
srs2dge-gizmos = { path = "../srs2dge-gizmos", optional = true }
srs2dge-gui = { path = "../srs2dge-gui", optional = true }
srs2dge-gui-derive = { path = "../srs2dge-gui-derive", optional = true }
srs2dge-presets = { path = "../srs2dge-presets", optional = true }
srs2dge-res = { path = "../srs2dge-res", optional = true }
srs2dge-text = { path = "../srs2dge-text", optional = true }
