[package]
name = "srs2dge-presets"
version = "0.4.0"
edition = "2021"
description = "Simple Rust 2D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.4" }
srs2dge-res = { path = "../srs2dge-res", version = "0.4" }
bytemuck = { version = "1.9", features = ["derive"] }
