[package]
name = "srs2dge-presets"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core" }
srs2dge-res = { path = "../srs2dge-res" }
bytemuck = { version = "1.9", features = ["derive"] }
