[package]
name = "srs2dge-text"
version = "0.2.0"
edition = "2021"
description = "srs2dge static resources"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.2" }
# font-loader = { version = "0.11", optional = true }
fontsdf = "0.4"
fontdue = "0.7"
