[package]
name = "srs2dge-text"
version = "0.4.0"
edition = "2021"
description = "srs2dge static resources"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core", version = "0.4" }
# font-loader = { version = "0.11", optional = true }
fontsdf = "0.4.6"
fontdue = "0.7.2"
itertools = "0.10.3"
once_cell = "1.13.1"
