[package]
name = "srs2dge-text"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge-core = { path = "../srs2dge-core" }
# font-loader = { version = "0.11", optional = true }
fontsdf = "0.5.0"
fontdue = "0.7.2"
itertools = "0.10.3"
once_cell = "1.13.1"
